--- a/TravelAlbum.Web/Views/SingleImages/Add.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Add.cshtml
@@ -42,6 +42,13 @@
                 <input type="file" id="image" name="UploadedImage" />
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.Label("Preview Image", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input type="file" id="preview-image" name="UploadedPreviewImage" />
+            </div>
+        </div>
         
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
