View models unnecessary properties removed, new model added for previewing images and output model for the detailed view of image amended, search images page added

--- a/TravelAlbum.Web/Views/Home/Index.cshtml
+++ b/TravelAlbum.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Web.Models.SingleImageModels.LatestSingleImagesOutputModel
+﻿@model TravelAlbum.Web.Models.ImageModels.LatestImagesOutputModel
 
 <div id="single-images-container">
 @if (Model != null && Model.singleImagePreviews != null)
