--- a/TravelAlbum.Web/Views/SingleImages/Details.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Web.Models.SingleImageModels.SingleImageOutputViewModel
+﻿@model TravelAlbum.Web.Models.ImageModels.ImageOutputViewModel
 <a href="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" data-lightbox="image-1">
     <img class="single-image-img" src="@String.Format("data:image/jpg;base64,{0}", Model.SingleImageData)" />
 </a>
