--- a/TravelAlbum.Web/Views/SingleImages/Add.cshtml
+++ b/TravelAlbum.Web/Views/SingleImages/Add.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TravelAlbum.Web.Models.SingleImageModels.SingleImageInputModel
-@using TravelAlbum.Models;
+
 
 @using (Html.BeginForm("Add", "SingleImages", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(m => m.Mountain, new { @class = "col-md-2 control-label" })
+            @Html.LabelFor(m => m.MountainId, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
                 @Html.DropDownListFor(m => m.MountainId, Model.MountainsDropDown, new { @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(model => model.MountainsDropDown, "", new { @class = "text-danger" })
