--- a/TravelAlbum.Web/Views/Images/SearchImages.cshtml
+++ b/TravelAlbum.Web/Views/Images/SearchImages.cshtml
@@ -3,36 +3,62 @@
 
 @using (Html.BeginForm("SearchImages", "Images", null, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
 {
-    <div class="form-group">
-        @Html.LabelFor(m => m.MountainsIds, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.ListBoxFor(model => model.MountainsIds, Model.MountainsDropDown, new { @class = "form-control", required = "required", data_placeholder = "Select one or more sport categories." })
-            @Html.ValidationMessageFor(model => model.Mountains, "", new { @class = "text-danger" })
-            @*@Html.DropDownListFor(m => m.SportCategories, Model.SportCategoriesDropDown, new { @class = "form-control" })*@
-        </div>
-    </div>
+    <div class="search-container">
+        @*
+        <div class="form-group search-group">
+            @Html.LabelFor(m => m.MountainsIds, new { @class = "control-label search-element" })
 
-    @Html.DropDownList("Sorting",
+            @Html.ListBoxFor(model => model.MountainsIds, Model.MountainsDropDown, new { @class = "form-control", required = "required", data_placeholder = "Select one or more mountains." })
+            @Html.ValidationMessageFor(model => model.Mountains, "", new { @class = "text-danger" })
+            @Html.DropDownListFor(m => m.SportCategories, Model.SportCategoriesDropDown, new { @class = "form-control" })
+
+
+
+
+
+        </div>
+        *@
+
+        <div class="search-group">
+        @foreach (var g in Model.MountainsDropDown)
+        {
+            <div>
+                <input type="checkbox"
+                       name="MountainsIds"
+                       value="@g.Value" id="@g.Value" @if (Model.MountainsIds.ToList().Contains(new Guid(g.Value)))
+                       {
+                           <text>checked</text>
+                       }/>
+                <label for="@g.Value">@g.Text</label>
+            </div>
+        }
+        </div>
+
+
+        <div class="search-group">
+            @Html.DropDownList("Sorting",
                     new SelectList(Enum.GetValues(typeof(Sorting))),
                     "Sort by date",
                     new { @class = "form-control" })
-    <input class="btn btn-primary" value="Търси" type="submit">
-        
+        </div>
+        <input class="btn btn-primary search-group" value="Търси" type="submit">
+    </div>
+
 }
 
 
 <div id="single-images-container">
     @if (Model != null && Model.singleImagePreviews != null)
+    {
+        foreach (var singleImage in Model.singleImagePreviews)
         {
-            foreach (var singleImage in Model.singleImagePreviews)
-            {
-                <div class='single-image-container'>
-                    <a href="@Url.Action("Details", "Images", new { id = singleImage.SingleImageId })">
-                        <img class='single-image' src='data:image/jpg;base64,@singleImage.SingleImageData' />
-                        <div class='cover-container'>                          
-                        </div>                        
-                    </a>
-                <div class='description'>@singleImage.CreatedOn </div>               
+            <div class='single-image-container'>
+                <a href="@Url.Action("Details", "Images", new { id = singleImage.SingleImageId })">
+                    <img class='single-image' src='data:image/jpg;base64,@singleImage.SingleImageData' />
+                    <div class='cover-container'>
+                    </div>
+                </a>
+                <div class='description'>@singleImage.CreatedOn </div>
             </div>
         }
     }
@@ -40,45 +66,44 @@
 
 
 @*
-@{Html.RenderPartial("_FacilityPartial", Model.Facilities);
+    @{Html.RenderPartial("_FacilityPartial", Model.Facilities);
 
-    string url = Request.RawUrl.ToString();
-    var parts = url.Split('/').ToList();
-    var lastPart = parts[parts.Count - 1].Split('?').ToList();
-    var id = lastPart[0]; 
-    }
-
-
-<nav>
-    <ul class="pagination">
-        @if (Model.CurrentPage > 1)
-        {
-            <li>
-                <a href="/Facilties/FacilitiesPublic/SearchFacilities/@id?currentPage=@(Model.CurrentPage - 1)" aria-label="Previous">&laquo;</a>
-            </li>
+        string url = Request.RawUrl.ToString();
+        var parts = url.Split('/').ToList();
+        var lastPart = parts[parts.Count - 1].Split('?').ToList();
+        var id = lastPart[0];
         }
 
-        @for (int i = 1; i <= Model.TotalPages; i++)
-        {
-            var className = string.Empty;
-            if (Model.CurrentPage == i)
+
+    <nav>
+        <ul class="pagination">
+            @if (Model.CurrentPage > 1)
             {
-                className = "active";
+                <li>
+                    <a href="/Facilties/FacilitiesPublic/SearchFacilities/@id?currentPage=@(Model.CurrentPage - 1)" aria-label="Previous">&laquo;</a>
+                </li>
             }
 
-            <li class="@className"><a href="/Facilities/FacilitiesPublic/SearchFacilities/@id?currentPage=@i">@i</a></li>
-        }
-        @if (Model.CurrentPage < Model.TotalPages)
-        {
-            <li>
-                <a href="/Facilities/FacilitiesPublic/SearchFacilities/@id?currentPage=@(Model.CurrentPage + 1)" aria-label="Next">&raquo;</a>
-            </li>
-        }
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                var className = string.Empty;
+                if (Model.CurrentPage == i)
+                {
+                    className = "active";
+                }
 
-    </ul>
-</nav>
+                <li class="@className"><a href="/Facilities/FacilitiesPublic/SearchFacilities/@id?currentPage=@i">@i</a></li>
+            }
+            @if (Model.CurrentPage < Model.TotalPages)
+            {
+                <li>
+                    <a href="/Facilities/FacilitiesPublic/SearchFacilities/@id?currentPage=@(Model.CurrentPage + 1)" aria-label="Next">&raquo;</a>
+                </li>
+            }
+
+        </ul>
+    </nav>*@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-*@
