--- a/TravelAlbum.Web/Views/Shared/_Layout.cshtml
+++ b/TravelAlbum.Web/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link href="~/Content/single-image-details.css" rel="stylesheet" />
     <link href="~/Content/comments.css" rel="stylesheet" />
     <link href="~/Content/travels.css" rel="stylesheet" />
+    <link href="~/Content/search-images.css" rel="stylesheet" />
 </head>
 <body>
     <div class="top-image"></div>
