--- a/TravelAlbum.Web/Views/Travels/Add.cshtml
+++ b/TravelAlbum.Web/Views/Travels/Add.cshtml
@@ -48,28 +48,28 @@
 
 
         <div class="form-group">
-            @Html.Label(TravelAlbum.Web.App_GlobalResources.GlobalResources.UploadedImage_1, new { @class = "control-label col-md-2" })
+            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_1, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="image_1" name="UploadedImage_1" />
             </div>
         </div>
 
         <div class="form-group">
-            @Html.Label(TravelAlbum.Web.App_GlobalResources.GlobalResources.UploadedImage_2, new { @class = "control-label col-md-2" })
+            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_2, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="image_2" name="UploadedImage_2" />
             </div>
         </div>
 
         <div class="form-group">
-            @Html.Label(TravelAlbum.Web.App_GlobalResources.GlobalResources.UploadedImage_3, new { @class = "control-label col-md-2" })
+            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_3, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="image_3" name="UploadedImage_3" />
             </div>
         </div>
 
         <div class="form-group">
-            @Html.Label(TravelAlbum.Web.App_GlobalResources.GlobalResources.UploadedImage_4, new { @class = "control-label col-md-2" })
+            @Html.Label(TravelAlbum.Resources.App_GlobalResources.GlobalResources.UploadedImage_4, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <input type="file" id="image_4" name="UploadedImage_4" />
             </div>
