Paging logic and styles added for the Images search

--- a/TravelAlbum.Web/Content/search-images.css
+++ b/TravelAlbum.Web/Content/search-images.css
@@ -12,3 +12,12 @@
     margin-left:auto;
     margin-right:auto
 }
+
+.search-pagination{
+    margin-left:auto;
+    margin-right:auto;
+    width:15%;
+    overflow:auto;
+    display:block
+
+}
