--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -3,7 +3,8 @@
     margin-left:auto;
     margin-right:auto;
     margin-bottom:10px;
-    width:1100px
+    width:1100px;
+    overflow: auto
 }
 
 #progress {
