Styles for he home page and background added

--- a/TravelAlbum.Web/Views/Images/SearchImages.cshtml
+++ b/TravelAlbum.Web/Views/Images/SearchImages.cshtml
@@ -2,54 +2,42 @@
 @using TravelAlbum.Web.Enums
 @using TravelAlbum.Resources.App_GlobalResources
 
-@using (Html.BeginForm("SearchImages", "Images", null, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
-{
-    <div class="search-container">
-        @*
-            <div class="form-group search-group">
-                @Html.LabelFor(m => m.MountainsIds, new { @class = "control-label search-element" })
-
-                @Html.ListBoxFor(model => model.MountainsIds, Model.MountainsDropDown, new { @class = "form-control", required = "required", data_placeholder = "Select one or more mountains." })
-                @Html.ValidationMessageFor(model => model.Mountains, "", new { @class = "text-danger" })
-                @Html.DropDownListFor(m => m.SportCategories, Model.SportCategoriesDropDown, new { @class = "form-control" })
-            </div>
-        *@
-
-        <div class="search-group">
-            @foreach (var g in Model.MountainsDropDown)
-            {
-                <div>
-                    <input type="checkbox"
-                           name="MountainsIds"
-                           class="mountain-checkbox"
-                           value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
+<div style="position:fixed;width:100%;top:100px">
+    @using (Html.BeginForm("SearchImages", "Images", null, FormMethod.Get, new { @class = "form-horizontal", role = "form" }))
+    {
+        <div class="search-container">
+            <div class="search-group">
+                @foreach (var g in Model.MountainsDropDown)
+                {
+                    <div>
+                        <input type="checkbox"
+                               name="MountainsIds"
+                               class="mountain-checkbox"
+                               value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
                            } />
-                    <label for="@g.Value">@g.Text</label>
-                </div>
-            }
+                        <label for="@g.Value">@g.Text</label>
+                    </div>
+                }
+            </div>
+            <div class="search-group">
+                @Html.EnumDropDownListFor(a => a.SelectedSorting, GlobalResources.SelectSortingLabel, new { @class = "form-control" })
+            </div>
+            <input class="btn btn-primary search-group submit-button" value="@GlobalResources.SearchButtonLabel" type="submit">
         </div>
+    }
+</div>
 
-        @*
-        <div class="search-group">
-            @Html.EnumDropDownListFor(a => a.SelectedSorting,
-                    new SelectList(Enum.GetValues(typeof(Sorting))))
-        </div>
-            *@
-        <div class="search-group">
-            @Html.EnumDropDownListFor(a => a.SelectedSorting, GlobalResources.SelectSortingLabel, new { @class = "form-control" })
-        </div>
-        <input class="btn btn-primary search-group submit-button" value="@GlobalResources.SearchButtonLabel" type="submit">
-    </div>
 
-}
+
+
 
 
 <div>
     <div id="single-images-container">
         @if (Model != null && Model.singleImagePreviews != null)
-        {
-            foreach (var singleImage in Model.singleImagePreviews)
             {
+                foreach (var singleImage in Model.singleImagePreviews)
+                {
                 <div class='single-image-container'>
                     <a href="@Url.Action("Details", "Images", new { id = singleImage.SingleImageId })">
                         <img class='single-image' src='data:image/jpg;base64,@singleImage.SingleImageData' />
@@ -60,39 +48,38 @@
                 </div>
             }
         }
-    </div>
-</div>
-
-
-@{
-    string url = Request.RawUrl.ToString();
-    var parts = url.Split('/').ToList();
-    var lastPart = parts[parts.Count - 1].Split('?').ToList();
-    var extractedLastPart = lastPart[0];
-}
 
 
 
-    <nav>
-        <ul class="pagination search-pagination">
-            @{ 
-                string mountains = string.Empty;
-                foreach (var mountainId in Model.MountainsIds)
-                {
-                    mountains = mountains + "MountainsIds=" + mountainId + "&";
+        @{
+            string url = Request.RawUrl.ToString();
+            var parts = url.Split('/').ToList();
+            var lastPart = parts[parts.Count - 1].Split('?').ToList();
+            var extractedLastPart = lastPart[0];
+        }
+
+
+
+        <nav>
+            <ul class="pagination search-pagination">
+                @{
+                    string mountains = string.Empty;
+                    foreach (var mountainId in Model.MountainsIds)
+                    {
+                        mountains = mountains + "MountainsIds=" + mountainId + "&";
+                    }
+                    string sorting = "SelectedSorting=" + Model.SelectedSorting + "&";
+                    int previousPage = @Model.CurrentPage - 1;
+                    int nextPage = Model.CurrentPage + 1;
                 }
-                string sorting = "SelectedSorting=" + Model.SelectedSorting + "&";
-                int previousPage = @Model.CurrentPage - 1;
-                int nextPage = Model.CurrentPage + 1;
-            }
-            @if (Model.CurrentPage > 1)
-            {                
-                <li>
-                    <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@previousPage"  aria-label="Previous">&laquo;</a>
-                </li>
-            }
+                @if (Model.CurrentPage > 1)
+            {
+                    <li>
+                        <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@previousPage" aria-label="Previous">&laquo;</a>
+                    </li>
+                }
 
-            @for (int i = 1; i <= Model.TotalPages; i++)
+                @for (int i = 1; i <= Model.TotalPages; i++)
             {
                 var className = string.Empty;
                 if (Model.CurrentPage == i)
@@ -100,17 +87,19 @@
                     className = "active";
                 }
 
-                
+
                 <li class="@className"><a class="page-number" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@i">@i</a></li>
-            }
-            @if (Model.CurrentPage < Model.TotalPages)
+                }
+                @if (Model.CurrentPage < Model.TotalPages)
             {
-                <li>
-                    <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@nextPage" aria-label="Next">&raquo;</a>
-                </li>
-            }
-        </ul>
-    </nav>
+                    <li>
+                        <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@nextPage" aria-label="Next">&raquo;</a>
+                    </li>
+                }
+            </ul>
+        </nav>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
