--- a/TravelAlbum.Web/Content/Site.css
+++ b/TravelAlbum.Web/Content/Site.css
@@ -1,5 +1,17 @@
-﻿body { 
+﻿body {     
     padding-bottom: 20px;
+}
+
+#bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    /* Preserve aspet ratio */
+    min-width: 100%;
+    min-height: 100%;
+    -webkit-filter: sepia(0.55) blur(3px);
+    filter: sepia(0.55) blur(3px); 
+    z-index:-1000;
 }
 
 /* Set padding to keep content from hitting the edges */
