--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -1,10 +1,17 @@
 ﻿#single-images-container {
     clear: both;
-    margin-left:auto;
-    margin-right:auto;
-    margin-bottom:10px;
-    width:1100px;
-    overflow: auto
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+    margin-bottom: 10px;
+    width: 1200px;    
+    z-index: -1000;
+    position: absolute;
+    top: 100px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: auto;
 }
 
 #progress {
