--- a/TravelAlbum.Web/Content/nav-bar.css
+++ b/TravelAlbum.Web/Content/nav-bar.css
@@ -7,10 +7,8 @@ body {
     position: sticky;
     top: 0;
     left: 0;
-    overflow: hidden;
-    background-color: #333;
-    width: 100%;
-    z-index:100
+    overflow: hidden;     
+    z-index: 100;    
 }
 
     .topnav .content-menu a {
