--- a/TravelAlbum.Web/Content/search-images.css
+++ b/TravelAlbum.Web/Content/search-images.css
@@ -10,7 +10,16 @@
 .search-container{
     width:30%;
     margin-left:auto;
-    margin-right:auto
+    margin-right:auto;    
+}
+
+
+.search-big-container {    
+    width: 100%;
+    height: 150px;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
 .search-pagination{
@@ -18,6 +27,7 @@
     margin-right:auto;
     width:15%;
     overflow:auto;
-    display:block
-
+    display:block;   
 }
+
+
