Database model SingleImage renamed to Image and subsequent changes applied

--- a/TravelAlbum.Web/Content/travels.css
+++ b/TravelAlbum.Web/Content/travels.css
@@ -7,7 +7,7 @@
 }
 
 #screen {
-    background-image: url('SingleImages/SL373554.JPG') no-repeat center center fixed;
+    background-image: url('DBImages/SL373554.JPG') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
