--- a/TravelAlbum.Web/Views/Images/Add.cshtml
+++ b/TravelAlbum.Web/Views/Images/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelAlbum.Web.Models.SingleImageModels.SingleImageInputModel
+﻿@model TravelAlbum.Web.Models.ImageModels.ImageInputModel
 
 
 @using (Html.BeginForm("Add", "Images", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
