--- a/TravelAlbum.Web/Content/search-images.css
+++ b/TravelAlbum.Web/Content/search-images.css
@@ -1,14 +1,14 @@
 ﻿.search-group{
     float:left;
-    margin:20px
+    margin-left:10px
 }
 
 .search-element{
-    margin-right:50px
+    margin-right:10px
 }
 
 .search-container{
-    width:30%;
+    width:50%;
     margin-left:auto;
     margin-right:auto;    
 }
@@ -16,7 +16,7 @@
 
 .search-big-container {    
     width: 100%;
-    height: 150px;
+    height: 60px;
     position: fixed;
     top: 0;
     z-index: 10;
