--- a/TravelAlbum.Web/Views/Images/SearchImages.cshtml
+++ b/TravelAlbum.Web/Views/Images/SearchImages.cshtml
@@ -22,6 +22,9 @@
             <div class="search-group">
                 @Html.EnumDropDownListFor(a => a.SelectedSorting, GlobalResources.SelectSortingLabel, new { @class = "form-control" })
             </div>
+            <div class="search-group">
+                @Html.DropDownListFor(a => a.SelectedPageSize, Model.PageSizes, "Show", new { @class = "form-control" })
+            </div>
             <input class="btn btn-primary search-group submit-button" value="@GlobalResources.SearchButtonLabel" type="submit">
         </div>
     }
@@ -75,7 +78,7 @@
                 @if (Model.CurrentPage > 1)
             {
                     <li>
-                        <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@previousPage" aria-label="Previous">&laquo;</a>
+                        <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@(previousPage)&SelectedPageSize=@Model.SelectedPageSize" aria-label="Previous">&laquo;</a>
                     </li>
                 }
 
@@ -88,12 +91,12 @@
                 }
 
 
-                <li class="@className"><a class="page-number" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@i">@i</a></li>
+                <li class="@className"><a class="page-number" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@i&SelectedPageSize=@Model.SelectedPageSize">@i</a></li>
                 }
                 @if (Model.CurrentPage < Model.TotalPages)
             {
                     <li>
-                        <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@nextPage" aria-label="Next">&raquo;</a>
+                        <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@nextPage&SelectedPageSize=@Model.SelectedPageSize" aria-label="Next">&raquo;</a>
                     </li>
                 }
             </ul>
