--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -1,17 +1,13 @@
 ﻿#single-images-container {
-    clear: both;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
     margin-bottom: 10px;
-    width: 1200px;    
     z-index: -1000;
+    overflow: auto;
+    width: 80%;
     position: absolute;
     top: 100px;
     bottom: 0;
-    left: 0;
+    left: 20%;
     right: 0;
-    overflow: auto;
 }
 
 #progress {
