--- a/TravelAlbum.Web/Content/nav-bar.css
+++ b/TravelAlbum.Web/Content/nav-bar.css
@@ -4,9 +4,10 @@ body {
 
 .topnav {
     position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
+    width:100%;
     overflow: hidden;     
     z-index: 100;    
 }
