Bootstrap styles added for checkboxes, translations added to resource dictionaries, paging amended

--- a/TravelAlbum.Web/Content/search-images.css
+++ b/TravelAlbum.Web/Content/search-images.css
@@ -36,4 +36,16 @@
     display:block;   
 }
 
+.centering {
+    width:20%;
+    float: none;
+    margin: 0 auto
+}
 
+.paging-container{
+    position:fixed;
+    top:90%;
+    margin-left:auto;
+    margin-right:auto;
+    width:100%
+}
