--- a/TravelAlbum.Web/Content/index.css
+++ b/TravelAlbum.Web/Content/index.css
@@ -5,7 +5,7 @@
     width: 80%;
     position: absolute;
     top: 100px;
-    bottom: 0;
+    bottom: 100px;
     left: 20%;
     right: 0;
 }
@@ -21,11 +21,10 @@
 }
 
 .description {
-    width: 30%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom:10px;
     display: block;
-    color:red;
+    color:slategrey;
+    font:bold 15px arial;    
     word-wrap: break-word;
 }
 
