--- a/TravelAlbum.Web/Views/Images/SearchImages.cshtml
+++ b/TravelAlbum.Web/Views/Images/SearchImages.cshtml
@@ -10,18 +10,28 @@
         </div>
 
         <div class="search-group">
-            @Html.DropDownListFor(a => a.SelectedPageSize, Model.PageSizes, "Show", new { @class = "form-control" })
+            @Html.DropDownListFor(a => a.SelectedPageSize, Model.PageSizes, GlobalResources.ShowPhotosLabel, new { @class = "form-control" })
         </div>
         <div class="search-group">
             @foreach (var g in Model.MountainsDropDown)
                 {
-                <div>
-                    <input type="checkbox"
-                           name="MountainsIds"
-                           class="mountain-checkbox"
-                           value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
-                           } />
-                    <label class="label-mountain-checkbox" for="@g.Value">@g.Text</label>
+                @*<div class="checkbox checkbox-primary checkbox-circle">
+                        <input type="checkbox"
+                               name="MountainsIds"
+                               class="mountain-checkbox"
+                               value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
+                               } />
+                        <label class="label-mountain-checkbox" for="@g.Value">@g.Text</label>
+                    </div>*@
+
+                <div class="form-group">
+                    <label class="custom-control custom-checkbox label-mountain-checkbox" for="@g.Value">
+                        <input class="custom-control-input mountain-checkbox" type="checkbox" name="MountainsIds"
+                               value="@g.Value" id="@g.Value" @if (Model.MountainsIds.Contains(new Guid(g.Value))) { <text> checked</text>
+                               }>
+                        <span class="custom-control-indicator"></span>
+                        <span class="custom-control-description">@g.Text</span>
+                    </label>
                 </div>
             }
         </div>
@@ -33,31 +43,33 @@
 
 
 
-    <div id="single-images-container">
-        @if (Model != null && Model.ImagePreviews != null)
+<div id="single-images-container">
+    @if (Model != null && Model.ImagePreviews != null)
             {
                 foreach (var image in Model.ImagePreviews)
                 {
-                <div class='single-image-container'>
-                    <a href="@Url.Action("Details", "Images", new { id = image.ImageId })">
-                        <img class='single-image' src='data:image/jpg;base64,@image.ImageData' />
-                        <div class='cover-container'>
-                        </div>
-                    </a>
-                    <div class='description'>@image.CreatedOn </div>
-                </div>
-            }
-        } 
-
-
-    @{
-        string url = Request.RawUrl.ToString();
-        var parts = url.Split('/').ToList();
-        var lastPart = parts[parts.Count - 1].Split('?').ToList();
-        var extractedLastPart = lastPart[0];
+            <div class='single-image-container'>
+                <a href="@Url.Action("Details", "Images", new { id = image.ImageId })">
+                    <img class='single-image' src='data:image/jpg;base64,@image.ImageData' />
+                    <div class='cover-container'>
+                    </div>
+                </a>
+                <div class='description'> @Html.DisplayFor(a => image.CreatedOn) </div>
+            </div>
+        }
     }
-    <nav>
-        <ul class="pagination search-pagination">
+
+</div>
+
+@{
+    string url = Request.RawUrl.ToString();
+    var parts = url.Split('/').ToList();
+    var lastPart = parts[parts.Count - 1].Split('?').ToList();
+    var extractedLastPart = lastPart[0];
+}
+<div class="paging-container">
+    <div class="centering">
+        <ul class="pagination ">
             @{
                 string mountains = string.Empty;
                 foreach (var mountainId in Model.MountainsIds)
@@ -70,8 +82,8 @@
             }
             @if (Model.CurrentPage > 1)
             {
-                <li>
-                    <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@(previousPage)&SelectedPageSize=@Model.SelectedPageSize" aria-label="Previous">&laquo;</a>
+                <li class="page-item">
+                    <a class="page-link" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@(previousPage)&SelectedPageSize=@Model.SelectedPageSize" aria-label="Previous">&laquo;</a>
                 </li>
             }
 
@@ -84,17 +96,18 @@
                 }
 
 
-                <li class="@className"><a class="page-number" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@i&SelectedPageSize=@Model.SelectedPageSize">@i</a></li>
+                <li class="page-item @className">
+                    <a class="page-number page-link" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@i&SelectedPageSize=@Model.SelectedPageSize">@i</a>
+                </li>
             }
             @if (Model.CurrentPage < Model.TotalPages)
             {
-                <li>
-                    <a href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@nextPage&SelectedPageSize=@Model.SelectedPageSize" aria-label="Next">&raquo;</a>
+                <li class="page-item">
+                    <a class="page-link" href="/Images/SearchImages/?@mountains@(sorting)CurrentPage=@nextPage&SelectedPageSize=@Model.SelectedPageSize" aria-label="Next">&raquo;</a>
                 </li>
             }
         </ul>
-    </nav>
-
+    </div>
 </div>
 
 @section Scripts {
